# customization_config_policy

./: BUILD.gn  OAT.xml  README.en.md  README.md  README_zh.md  bundle.json  config_policy.gni  ohos.build
common/config/: BUILD.gn
frameworks/config_policy/: BUILD.gn
frameworks/config_policy/etc/: customization.para.dac
frameworks/config_policy/ets/ani/: BUILD.gn
frameworks/config_policy/ets/ani/src/: config_policy_ani.cpp
frameworks/config_policy/src/: config_policy_utils.c
frameworks/cust_lite/: BUILD.gn
frameworks/cust_lite/src/: cust_utils.c
frameworks/cust_lite/test/: BUILD.gn
frameworks/cust_lite/test/unittest/lite/common/: cust_utils_test.cpp  cust_utils_test.h
frameworks/dfx/: hisysevent.yaml
frameworks/dfx/hisysevent_adapter/: hisysevent_adapter.cpp  hisysevent_adapter.h
interfaces/ets/ani/: BUILD.gn
interfaces/ets/ani/ets/: @ohos.configPolicy.ets  @ohos.customization.customConfig.ets
interfaces/ets/ani/include/: ani_utils.h  config_policy_ani.h  custom_config_ani.h
interfaces/ets/ani/src/: ani_utils.cpp  config_policy_ani.cpp  custom_config_ani.cpp
interfaces/inner_api/include/: config_policy_impl.h  config_policy_utils.h
interfaces/innerkits/include/: config_policy_impl.h  config_policy_utils.h  cust_utils.h
interfaces/js/kits/: BUILD.gn
interfaces/js/kits/include/: cust_addon.h  cust_napi.h
interfaces/js/kits/src/: cust_addon.cpp  cust_napi.cpp
interfaces/kits/cj/: BUILD.gn
interfaces/kits/cj/src/: config_policy_ffi.cpp  config_policy_ffi.h  config_policy_log.h  config_policy_mock.cpp
interfaces/kits/js/: BUILD.gn
interfaces/kits/js/include/: config_policy_napi.h  custom_config_napi.h
interfaces/kits/js/src/: config_policy_napi.cpp  custom_config_napi.cpp
test/fuzztest/: BUILD.gn
test/fuzztest/getcfgfiles_fuzzer/: BUILD.gn  getcfgfiles_fuzzer.cpp
test/fuzztest/getcfgfilesex_fuzzer/: BUILD.gn  getcfgfilesex_fuzzer.cpp
test/fuzztest/getonecfgfile_fuzzer/: BUILD.gn  getonecfgfile_fuzzer.cpp
test/fuzztest/getonecfgfileex_fuzzer/: BUILD.gn  getonecfgfileex_fuzzer.cpp
test/resource/: ohos_test.xml
test/unittest/: BUILD.gn  config_policy_utils_test.cpp  config_policy_utils_test.h
test/unittest/resource/: ohos_test.xml
