# Copyright (c) 2021 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

if (defined(ohos_lite)) {
  import("//build/lite/config/component/lite_component.gni")
} else {
  import("//build/ohos.gni")
}

cust_sources = [ "src/cust_utils.c" ]
config("cust_config") {
  include_dirs = [
    "//base/global/cust_lite/interfaces/innerkits/include",
    "//third_party/bounds_checking_function/include",
  ]
}

if (defined(ohos_lite)) {
  shared_library("cust") {
    sources = cust_sources
    public_configs = [ ":cust_config" ]
    deps = [ "//third_party/bounds_checking_function:libsec_shared" ]
  }
  lite_component("global_cust_lite") {
    features = [ ":cust" ]
  }
} else {
  ohos_shared_library("cust") {
    sources = cust_sources
    public_configs = [ ":cust_config" ]
    deps = [ "//third_party/bounds_checking_function:libsec_static" ]
    subsystem_name = "global"
    part_name = "cust_lite"
  }
}
