# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("configpolicy") {
  include_dirs = [
    "include",
    "../../../interfaces/inner_api/include",
    "../../../frameworks/dfx/hisysevent_adapter",
  ]

  sources = [
    "../../../frameworks/dfx/hisysevent_adapter/hisysevent_adapter.cpp",
    "src/config_policy_napi.cpp",
  ]

  deps = [ "../../../frameworks/config_policy:configpolicy_util" ]
  external_deps = [
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "napi:ace_napi",
  ]
  relative_install_dir = "module"
  subsystem_name = "customization"
  part_name = "config_policy"
}

ohos_shared_library("customconfig") {
  include_dirs = [
    "include",
    "../../../interfaces/inner_api/include",
  ]

  sources = [
    "src/custom_config_napi.cpp",
  ]

  external_deps = [
    "ability_runtime:abilitykit_native",
    "ability_runtime:app_context",
    "c_utils:utils",
    "hilog:libhilog",
    "init:libbegetutil",
    "napi:ace_napi",
  ]
  relative_install_dir = "module/customization"
  subsystem_name = "customization"
  part_name = "config_policy"
}
